Bug 1642800 - Don't enforce minimum window dimensions on non-popup windows if they're not resizable on Windows. r=mhowell

The enforcement is only important when users are able to resize the windows. Otherwise,
we let Gecko set the window dimensions to whatever dimensions they'd like.

Differential Revision: https://phabricator.services.mozilla.com/D78538